インデントを揃える

--- a/就業規則.md
+++ b/就業規則.md
@@ -39,8 +39,8 @@
 
 ### 第9条（休職）
 1. 社員が、次のいずれかに該当するときは、所定の期間休職とする。
-    1. 業務外の傷病による欠勤が1か月を超え、療養を継続する必要があるため勤務できないとき、1年以内
-    2. 前号のほか、特別な事情があり休職させることが適当と認められるとき、必要な期間
+  1. 業務外の傷病による欠勤が1か月を超え、療養を継続する必要があるため勤務できないとき、1年以内
+  2. 前号のほか、特別な事情があり休職させることが適当と認められるとき、必要な期間
 2. 休職期間中に休職事由が消滅したときは、原則として元の職務に復帰させる。ただし、元の職務に復帰させることが困難又は不適当な場合には、他の職務に就かせることがある。
 3. 第1項第1号により休職し、休職期間が満了してもなお傷病が治癒せず就業が困難な場合は、休職期間の満了をもって退職とする。
 
@@ -51,7 +51,7 @@
 
 ### 第11条（遵守事項）
 1. 社員は、以下の事項を守らなければならない。
-    1. 会社の施設スペース又は物品を無断で第3者に又貸ししてはならない。
+  1. 会社の施設スペース又は物品を無断で第3者に又貸ししてはならない。
 
 ### 第12条（職場のパワーハラスメントの禁止）
 1. 職務上の地位や人間関係などの職場内の優位性を背景にした、業務の適正な範囲を超える言動により、他の社員に精神的・身体的な苦痛を与えたり、就業環境を害するようなことをしてはならない。
@@ -85,12 +85,12 @@
 
 ### 第20条（休日）
 1. 休日は、次のとおりとする。
-    1. 土曜日及び日曜日
-    2. 国民の祝日（日曜日と重なったときは翌日）
-    3. 年末年始（12月25日〜1月6日）
-    4. 夏季休暇（8月の連続した2週間、7月に会社が決定）
-    5. 雪や大雨など交通が乱れる日
-    6. その他会社が指定する日
+  1. 土曜日及び日曜日
+  2. 国民の祝日（日曜日と重なったときは翌日）
+  3. 年末年始（12月25日〜1月6日）
+  4. 夏季休暇（8月の連続した2週間、7月に会社が決定）
+  5. 雪や大雨など交通が乱れる日
+  6. その他会社が指定する日
 2. 業務の都合により会社と当人が必要と認める場合は、あらかじめ前項の休日を他の日と振り替えることがある。
 
 ### 第21条（時間外及び休日労働等）
@@ -130,12 +130,12 @@
 
 ### 第28条（慶弔休暇）
 1. 社員が申請した場合は、次のとおり慶弔休暇を与える。
-    1. 本人が結婚したとき ... 30日
-    2. 本人の子女が結婚したとき ... 3日
-    3. 妻が出産したとき ... 30日
-    4. 配偶者、子（養子を含む）が死亡したとき  ... 30日
-    5. 父母（養継を含む）、兄弟姉妹が死亡したとき  ... 30日
-    6. 祖父母、配偶者の父母又は兄弟姉妹が死亡したとき ... 3日
+  1. 本人が結婚したとき ... 30日
+  2. 本人の子女が結婚したとき ... 3日
+  3. 妻が出産したとき ... 30日
+  4. 配偶者、子（養子を含む）が死亡したとき  ... 30日
+  5. 父母（養継を含む）、兄弟姉妹が死亡したとき  ... 30日
+  6. 祖父母、配偶者の父母又は兄弟姉妹が死亡したとき ... 3日
 
 ### 第29条（病気休暇）
 1. 社員が私的な負傷又は疾病のため療養する必要があり、その勤務しないことがやむを得ないと認められる場合に、病気休暇を必要な日数与える。
@@ -147,26 +147,24 @@
 
 ### 第31条（賃金の構成）
 1. 賃金の構成は、次のとおりとする。
-    1. 賃金
-        基本給
-        手当
-            役職手当
-            通勤手当
-            家族手当
-            残業手当
-            深夜残業手当
-            法定休日手当
-            所定休日手当
+  1. 賃金
+  2. 基本給
+  3. 手当
+    1. 役職手当
+    2. 通勤手当
+    3. 家族手当
+    4. 残業手当
+    5. 深夜残業手当
+    6. 法定休日手当
+    7. 所定休日手当
 
 ### 第32条（基本給）
 1. 基本給は、本人の職務内容、技能、勤務成績、年齢等を考慮して各人別に決定する。
 
 ### 第33条（家族手当）
 1. 家族手当は、次の家族を扶養している社員に対し支給する。
-    1. 18歳未満の子
-        1人につき　　　月額2万円
-    2. 65歳以上の父母
-        1人につき　　　月額2万円
+  1. 18歳未満の子、1人につき月額2万円
+  2. 65歳以上の父母、1人につき月額2万円
 
 ### 第34条（通勤手当）
 1. 通勤手当は、月額3万円までの範囲内において、通勤に要する実費に相当する額を支給する。
@@ -183,9 +181,9 @@
 
 ### 第37条（適用除外）
 1. 次の各号のいずれかに該当するものについては、本章の定める労働時間、休憩、時間外、休日および深夜勤務に関する規則と異なる取扱いをする。
-    1. 管理監督職の職務にある者。
-    2. みなし労働時間または裁量労働時間の適用を受ける者。
-    3. 行政官庁の許可を受けた監視または断続的勤務に従事する者。
+  1. 管理監督職の職務にある者。
+  2. みなし労働時間または裁量労働時間の適用を受ける者。
+  3. 行政官庁の許可を受けた監視または断続的勤務に従事する者。
 
 ### 第38条（休暇等の賃金）
 1. 年次有給休暇および夏季休暇の期間は、所定労働時間労働したときに支払われる通常の賃金を支払う。
@@ -205,17 +203,17 @@
 1. 賃金は、社員に対し、通貨で直接その全額を支払う。
 2. 前項について、社員が同意した場合は、社員本人の指定する金融機関の預貯金口座又は証券総合口座へ振込により賃金を支払う。
 3. 次に掲げるものは、賃金から控除する。
-    1. 源泉所得税
-    2. 住民税
-    3. 健康保険、厚生年金保険及び雇用保険の保険料の被保険者負担分
-    4. 社員代表との書面による協定により賃金から控除することとした社宅入居料、財形貯蓄の積立金及び組合費
+  1. 源泉所得税
+  2. 住民税
+  3. 健康保険、厚生年金保険及び雇用保険の保険料の被保険者負担分
+  4. 社員代表との書面による協定により賃金から控除することとした社宅入居料、財形貯蓄の積立金及び組合費
 
 ### 第42条（賃金の非常時払い）
 1. 社員又はその収入によって生計を維持する者が、次のいずれかの場合に該当し、そのために社員から請求があったときは、賃金支払日前であっても、既往の労働に対する賃金を支払う。
-    1. やむを得ない事由によって１週間以上帰郷する場合
-    2. 結婚又は死亡の場合
-    3. 出産、疾病又は災害の場合
-    4. 退職又は解雇により離職した場合
+  1. やむを得ない事由によって１週間以上帰郷する場合
+  2. 結婚又は死亡の場合
+  3. 出産、疾病又は災害の場合
+  4. 退職又は解雇により離職した場合
 
 ### 第43条（昇給）
 1. 昇給は、勤務成績その他が良好な社員について、毎年4月1日をもって行うものとする。ただし、会社の業績の著しい低下その他やむを得ない事由がある場合は、行わないことがある。
@@ -233,27 +231,27 @@
 
 ### 第46条（退職）
 1. 前条に定めるもののほか、社員が次のいずれかに該当するときは、退職とする。
-    1. 退職を願い出て会社が承認したとき、又は退職願を提出して5日を経過したとき
-    2. 期間を定めて雇用されている場合、その期間を満了したとき
-    3. 第9条に定める休職期間が満了し、なお休職事由が消滅しないとき
-    4. 死亡したとき
+  1. 退職を願い出て会社が承認したとき、又は退職願を提出して5日を経過したとき
+  2. 期間を定めて雇用されている場合、その期間を満了したとき
+  3. 第9条に定める休職期間が満了し、なお休職事由が消滅しないとき
+  4. 死亡したとき
 2. 社員が退職し、又は解雇された場合、その請求に基づき、使用期間、業務の種類、地位、賃金又は退職の事由を記載した証明書を遅滞なく交付する。
 
 ### 第47条（解雇）
 1. 社員が次のいずれかに該当するときは、解雇することがある。
-    1. 勤務状況が著しく不良で、改善の見込みがなく、社員としての職責を果たし得ないとき。
-    2. 勤務成績又は業務能率が著しく不良で、向上の見込みがなく、他の職務にも転換できない等就業に適さないとき。
-    3. 業務上の負傷又は疾病による療養の開始後3年を経過しても当該負傷又は疾病が治らない場合であって、社員が傷病補償年金を受けているとき又は受けることとなったとき（会社が打ち切り補償を支払ったときを含む）。
-    4. 精神又は身体の障害により業務に耐えられないとき。
-    5. 試用期間における作業能率又は勤務態度が著しく不良で、社員として不適格であると認められたとき。
-    6. 第54条第2項に定める懲戒解雇事由に該当する事実が認められたとき。
-    7. 事業の運営上又は天災事変その他これに準ずるやむを得ない事由により、事業の縮小又は部門の閉鎖等を行う必要が生じ、かつ他の職務への転換が困難なとき。
-    8. その他前各号に準ずるやむを得ない事由があったとき。
+  1. 勤務状況が著しく不良で、改善の見込みがなく、社員としての職責を果たし得ないとき。
+  2. 勤務成績又は業務能率が著しく不良で、向上の見込みがなく、他の職務にも転換できない等就業に適さないとき。
+  3. 業務上の負傷又は疾病による療養の開始後3年を経過しても当該負傷又は疾病が治らない場合であって、社員が傷病補償年金を受けているとき又は受けることとなったとき（会社が打ち切り補償を支払ったときを含む）。
+  4. 精神又は身体の障害により業務に耐えられないとき。
+  5. 試用期間における作業能率又は勤務態度が著しく不良で、社員として不適格であると認められたとき。
+  6. 第54条第2項に定める懲戒解雇事由に該当する事実が認められたとき。
+  7. 事業の運営上又は天災事変その他これに準ずるやむを得ない事由により、事業の縮小又は部門の閉鎖等を行う必要が生じ、かつ他の職務への転換が困難なとき。
+  8. その他前各号に準ずるやむを得ない事由があったとき。
 2. 前項の規定により社員を解雇する場合は、少なくとも30日前に予告をする。予告しないときは、平均賃金の30日分以上の手当を解雇予告手当として支払う。ただし、予告の日数については、解雇予告手当を支払った日数だけ短縮することができる。
 3. 前項の規定は、労働基準監督署長の認定を受けて社員を第63条第1項第4号に定める懲戒解雇する場合又は次の各号のいずれかに該当する社員を解雇する場合は適用しない。
-    1. 日々雇い入れられる社員（ただし、１か月を超えて引き続き使用されるに至った者を除く。）
-    2. ２か月以内の期間を定めて使用する社員（ただし、その期間を超えて引き続き使用されるに至った者を除く。）
-    3. 試用期間中の社員（ただし、14日を超えて引き続き使用されるに至った者を除く。）
+  1. 日々雇い入れられる社員（ただし、１か月を超えて引き続き使用されるに至った者を除く。）
+  2. ２か月以内の期間を定めて使用する社員（ただし、その期間を超えて引き続き使用されるに至った者を除く。）
+  3. 試用期間中の社員（ただし、14日を超えて引き続き使用されるに至った者を除く。）
 4. 第1項の規定による社員の解雇に際して社員から請求のあった場合は、解雇の理由を記載した証明書を交付する。
 
 ## 第8章 安全衛生及び災害補償
@@ -262,13 +260,13 @@
 1. 会社は、社員の安全衛生の確保及び改善を図り、快適な職場の形成のために必要な措置を講ずる。
 2. 社員は、安全衛生に関する法令及び会社の指示を守り、会社と協力して労働災害の防止に努めなければならない。
 3. 社員は安全衛生の確保のため、特に下記の事項を遵守しなければならない。
-    1. 機械設備、工具等の就業前点検を徹底すること。また、異常を認めたときは、速やかに会社に報告し、指示に従うこと。
-    2. 安全装置を取り外したり、その効力を失わせるようなことはしないこと。
-    3. 保護具の着用が必要な作業については、必ず着用すること。
-    4. 喫煙は、所定の場所以外では行わないこと。
-    5. 立入禁止又は通行禁止区域には立ち入らないこと。
-    6. 常に整理整頓に努め、通路、避難口又は消火設備のある所に物品を置かないこと。
-    7. 火災等非常災害の発生を発見したときは、直ちに臨機の措置をとり、消防・上長に報告し、その指示に従うこと。
+  1. 機械設備、工具等の就業前点検を徹底すること。また、異常を認めたときは、速やかに会社に報告し、指示に従うこと。
+  2. 安全装置を取り外したり、その効力を失わせるようなことはしないこと。
+  3. 保護具の着用が必要な作業については、必ず着用すること。
+  4. 喫煙は、所定の場所以外では行わないこと。
+  5. 立入禁止又は通行禁止区域には立ち入らないこと。
+  6. 常に整理整頓に努め、通路、避難口又は消火設備のある所に物品を置かないこと。
+  7. 火災等非常災害の発生を発見したときは、直ちに臨機の措置をとり、消防・上長に報告し、その指示に従うこと。
 
 ### 第49条（健康診断）
 1. 社員に対しては、採用の際及び毎年1回（深夜労働に従事する者は6か月ごとに1回）、定期に健康診断を行う。
@@ -283,7 +281,7 @@
 
 ### 第51条（健康管理上の個人情報の取扱い）
 1. 会社への提出書類及び身上その他の個人情報（家族状況も含む）並びに健康診断書その他の健康情報は、次の目的のために利用する。
-    1. 会社の労務管理、賃金管理、健康管理
+  1. 会社の労務管理、賃金管理、健康管理
 2. 社員の定期健康診断の結果、社員から提出された診断書、産業医等からの意見書、長時間社員への面接指導の結果、ストレスチェックの結果及び高ストレス者への面接指導の結果その他社員の健康管理に関する情報は、社員の健康管理のために利用するとともに、必要な場合には産業医等に意見聴取等のために提供するものとする。
 3. ストレスチェックを実施した医師、保健師等から社員のストレスチェックの結果を入手する場合には、あらかじめ本人の同意を得るものとする。ただし、当該社員が面接指導を申し出た場合には、同意が得られたものとみなす。
 4. 健康診断、長時間社員への面接指導、ストレスチェック及び高ストレス者への面接指導の実施の事務に従事した者は、その事務に従事したことによって知り得た社員の秘密を漏らしてはならない。
@@ -295,28 +293,28 @@
 
 ### 第53条（懲戒の種類）
 1. 会社は、社員が次条のいずれかに該当する場合は、その情状に応じ、次の区分により懲戒を行う。
-    1. 降職・降格
-        1. 現在就いている役職を降りる
-    2. 懲戒解雇
-        1. 予告期間を設けることなく即時に解雇する。この場合において、所轄の労働基準監督署長の認定を受けたときは、解雇予告手当（平均賃金の30日分）を支給しない。
+  1. 降職・降格
+    1. 現在就いている役職を降りる
+  2. 懲戒解雇
+    1. 予告期間を設けることなく即時に解雇する。この場合において、所轄の労働基準監督署長の認定を受けたときは、解雇予告手当（平均賃金の30日分）を支給しない。
 
 ### 第54条（懲戒の事由）
 1. 社員が次のいずれかに該当するときは、情状に応じ、降職・降格とする。
-    1. 第11条、第12条、第13条、第14条、第15条に違反した時。
+  1. 第11条、第12条、第13条、第14条、第15条に違反した時。
 2. 社員が次のいずれかに該当するときは、懲戒解雇とする。
-    1. 重要な経歴を詐称して雇用されたとき。
-    2. 正当な理由なく無断欠勤が14日以上に及び、出勤の督促に応じなかったとき。
-    3. 正当な理由なく無断でしばしば遅刻、早退又は欠勤を繰り返し、3回にわたって注意を受けても改めなかったとき。
-    4. 正当な理由なく、しばしば業務上の指示・命令に従わなかったとき。
-    5. 故意又は重大な過失により会社に重大な損害を与えたとき。
-    6. 会社内において刑法その他刑罰法規の各規定に違反する行為を行い、その犯罪事実が明らかとなったとき（当該行為が軽微な違反である場合を除く。）。
-    7. 数回にわたり懲戒を受けたにもかかわらず、なお、勤務態度等に関し、改善の見込みがないとき。
-    8. 第11条、第12条、第13条、第14条、第15条に違反し、その情状が悪質と認められるとき。
-    9. 許可なく職務以外の目的で会社の施設、物品等を使用したとき。
-    10. 職務上の地位を利用して私利を図り、又は取引先等より不当な金品を受け、若しくは求め若しくは供応を受けたとき。
-    11. 私生活上の非違行為や会社に対する正当な理由のない誹謗中傷等であって、会社の名誉信用を損ない、業務に重大な悪影響を及ぼす行為をしたとき。
-    12. 正当な理由なく会社の業務上重要な秘密を外部に漏洩して会社に損害を与え、又は業務の正常な運営を阻害したとき。
-    13. その他前各号に準ずる不適切な行為があったとき。
+  1. 重要な経歴を詐称して雇用されたとき。
+  2. 正当な理由なく無断欠勤が14日以上に及び、出勤の督促に応じなかったとき。
+  3. 正当な理由なく無断でしばしば遅刻、早退又は欠勤を繰り返し、3回にわたって注意を受けても改めなかったとき。
+  4. 正当な理由なく、しばしば業務上の指示・命令に従わなかったとき。
+  5. 故意又は重大な過失により会社に重大な損害を与えたとき。
+  6. 会社内において刑法その他刑罰法規の各規定に違反する行為を行い、その犯罪事実が明らかとなったとき（当該行為が軽微な違反である場合を除く。）。
+  7. 数回にわたり懲戒を受けたにもかかわらず、なお、勤務態度等に関し、改善の見込みがないとき。
+  8. 第11条、第12条、第13条、第14条、第15条に違反し、その情状が悪質と認められるとき。
+  9. 許可なく職務以外の目的で会社の施設、物品等を使用したとき。
+  10. 職務上の地位を利用して私利を図り、又は取引先等より不当な金品を受け、若しくは求め若しくは供応を受けたとき。
+  11. 私生活上の非違行為や会社に対する正当な理由のない誹謗中傷等であって、会社の名誉信用を損ない、業務に重大な悪影響を及ぼす行為をしたとき。
+  12. 正当な理由なく会社の業務上重要な秘密を外部に漏洩して会社に損害を与え、又は業務の正常な運営を阻害したとき。
+  13. その他前各号に準ずる不適切な行為があったとき。
 
 ### 第55条（公益通報者の保護）
 1. 会社は、社員から組織的又は個人的な法令違反行為等に関する相談又は通報があった場合には、別に定めるところにより処理を行う。
@@ -325,10 +323,10 @@
 1. 社員は、勤務時間外において、他の会社等の業務に従事することができる。
 2. 社員は、前項の業務に従事するにあたっては、事前に、会社に予め相談するものとする。
 3. 第1項の業務に従事することにより、次の各号のいずれかに該当する場合には、会社は、これを禁止又は制限することができる。
-    1. 労務提供上の支障がある場合
-    2. 企業秘密が漏洩する場合
-    3. 会社の名誉や信用を損なう行為や、信頼関係を破壊する行為がある場合
-    4. 競業により、企業の利益を害する場合
+  1. 労務提供上の支障がある場合
+  2. 企業秘密が漏洩する場合
+  3. 会社の名誉や信用を損なう行為や、信頼関係を破壊する行為がある場合
+  4. 競業により、企業の利益を害する場合
 
 ## 附 則
 
