--- a/就業規則.md
+++ b/就業規則.md
@@ -51,12 +51,12 @@
 
 ### 第11条（遵守事項）
 1. 社員は、以下の事項を守らなければならない。
-    1. 会社の施設スペース又は物品を無断で第3者に又貸ししてはならない。
+    1. 会社の施設スペース又は物品を無断で第三者に又貸ししてはならない。
 
 ### 第12条（職場のパワーハラスメントの禁止）
 1. 職務上の地位や人間関係などの職場内の優位性を背景にした、業務の適正な範囲を超える言動により、他の社員に精神的・身体的な苦痛を与えたり、就業環境を害するようなことをしてはならない。
 
-### 第13条（セクシュアルハラスメントの禁止）
+### 第13条（セクシャルハラスメントの禁止）
 1. 性的言動により、他の社員に不利益や不快感を与えたり、就業環境を害するようなことをしてはならない。
 
 ### 第14条（妊娠・出産・育児休業・介護休業等に関するハラスメントの禁止）
@@ -151,12 +151,13 @@
     2. 基本給
     3. 手当
         1. 役職手当
-        2. 通勤手当
-        3. 家族手当
-        4. 残業手当
-        5. 深夜残業手当
-        6. 法定休日手当
-        7. 所定休日手当
+        2. 住宅手当
+        3. 通勤手当
+        4. 家族手当
+        5. 残業手当
+        6. 深夜残業手当
+        7. 法定休日手当
+        8. 所定休日手当
 
 ### 第32条（基本給）
 1. 基本給は、本人の職務内容、技能、勤務成績、年齢等を考慮して各人別に決定する。
@@ -166,21 +167,22 @@
     1. 18歳未満の子、1人につき月額2万円
     2. 65歳以上の父母、1人につき月額2万円
 
-### 第34条（通勤手当）
+### 第34条（住宅手当）
+1. 徒歩又は自転車で通勤可能な圏内に住む場合、通勤手当は支給せず住宅手当として月額3万円を支給する。
+
+### 第35条（通勤手当）
 1. 通勤手当は、月額3万円までの範囲内において、通勤に要する実費に相当する額を支給する。
 
-### 第35条（役職手当）
+### 第36条（役職手当）
 1. 役付手当は、以下の職位にある者に対し支給する。
     室長月額20万円
 2. 昇格によるときは、発令日の属する賃金月から支給する。この場合、当該賃金月においてそれまで属していた役付手当は支給しない。
 3. 降格によるときは、発令日の属する賃金月の次の賃金月から支給する。
 
-### 第36条（割増賃金）
+### 第37条（割増賃金）
 1. 法定を超えた時間外、深夜または法定休日に勤務をさせた場合は、賃金規程の定めるところにより割増賃金を支給する。
-2. 第37条（適用除外）に該当する者には、本条（深夜割増賃金を除く。）は適用しない。
-
-### 第37条（適用除外）
-1. 次の各号のいずれかに該当するものについては、本章の定める労働時間、休憩、時間外、休日および深夜勤務に関する規則と異なる取扱いをする。
+2. 次項に該当する者には、本条（深夜割増賃金を除く。）は適用しない。
+3. 次の各号のいずれかに該当するものについては、本章の定める労働時間、休憩、時間外、休日および深夜勤務に関する規則と異なる取扱いをする。
     1. 管理監督職の職務にある者。
     2. みなし労働時間または裁量労働時間の適用を受ける者。
     3. 行政官庁の許可を受けた監視または断続的勤務に従事する者。
@@ -193,7 +195,7 @@
 ### 第39条（欠勤等の扱い）
 1. 欠勤、遅刻、早退及び私用外出については、基本給から当該日数又は時間分の賃金を控除する。
 2. 前項の場合、控除すべき賃金の１時間あたりの金額の計算は以下のとおりとする。
-    1. 基本給÷１か月平均所定労働時間数（１か月平均所定労働時間数は第３６条第３項の算式により計算する。）
+    1. 基本給÷１か月平均所定労働時間数
 
 ### 第40条（賃金の計算期間及び支払日）
 1. 賃金は、毎月月末に締め切って計算し、翌月15日に支払う。ただし、支払日が休日に当たる場合は、その前日に繰り上げて支払う。
@@ -235,7 +237,7 @@
     2. 期間を定めて雇用されている場合、その期間を満了したとき
     3. 第9条に定める休職期間が満了し、なお休職事由が消滅しないとき
     4. 死亡したとき
-2. 社員が退職し、又は解雇された場合、その請求に基づき、使用期間、業務の種類、地位、賃金又は退職の事由を記載した証明書を遅滞なく交付する。
+2. 社員が退職し、又は解雇された場合、その請求に基づき、雇用期間、業務の種類、地位、賃金又は退職の事由を記載した証明書を遅滞なく交付する。
 
 ### 第47条（解雇）
 1. 社員が次のいずれかに該当するときは、解雇することがある。
@@ -248,7 +250,7 @@
     7. 事業の運営上又は天災事変その他これに準ずるやむを得ない事由により、事業の縮小又は部門の閉鎖等を行う必要が生じ、かつ他の職務への転換が困難なとき。
     8. その他前各号に準ずるやむを得ない事由があったとき。
 2. 前項の規定により社員を解雇する場合は、少なくとも30日前に予告をする。予告しないときは、平均賃金の30日分以上の手当を解雇予告手当として支払う。ただし、予告の日数については、解雇予告手当を支払った日数だけ短縮することができる。
-3. 前項の規定は、労働基準監督署長の認定を受けて社員を第63条第1項第4号に定める懲戒解雇する場合又は次の各号のいずれかに該当する社員を解雇する場合は適用しない。
+3. 前項の規定は、労働基準監督署長の認定を受けて社員を第53条第1項第2号に定める懲戒解雇する場合又は次の各号のいずれかに該当する社員を解雇する場合は適用しない。
     1. 日々雇い入れられる社員（ただし、１か月を超えて引き続き使用されるに至った者を除く。）
     2. ２か月以内の期間を定めて使用する社員（ただし、その期間を超えて引き続き使用されるに至った者を除く。）
     3. 試用期間中の社員（ただし、14日を超えて引き続き使用されるに至った者を除く。）
@@ -331,4 +333,4 @@
 ## 附 則
 
 ### 第1条（施行期日）
-この規則は、平成30年6月1日から施行する。
+この規則は、平成30年4月24日から施行する。
